<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Settings</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
    <string name="general_action_yes">Yes</string>
    <string name="general_action_no">No</string>
    <string name="action_on_title">On</string>
    <string name="action_off_title">Off</string>
    <string name="action_on_description">On</string>
    <string name="action_off_description">Off</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="unavailable">Unavailable</string>
    <string name="header_category_suggestions">Suggestions</string>
    <string name="header_category_quick_settings">Quick Settings</string>
    <string name="header_category_general_settings">General Settings</string>
    <string name="dismiss_suggestion">Dismiss the suggestion</string>
    <string name="hotwording_title">\"OK Google\" detection</string>
    <string name="hotwording_summary">Talk to Google Assistant anytime</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; Accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="connect_to_network">Connect to network</string>
    <string name="add_an_account">Add an account</string>
    <string name="accounts_category_title">Accounts &amp; sign-in</string>
    <string name="accounts_category_summary_no_account">No accounts</string>
    <string name="accounts_category_summary"> {count, plural,
        =1    {# account}
        other {# accounts}
        }
    </string>
    <string name="accounts_slice_summary">Media services, Assistant, Payments</string>
    <string name="connectivity_network_category_title">Network &amp; Internet</string>
    <string name="sound_category_title">Sound</string>
    <string name="applications_category_title">Apps</string>
    <string name="device_pref_category_title">Device Preferences</string>
    <string name="remotes_and_accessories_category_title">Bluetooth &amp; accessories</string>
    <string name="display_and_sound_category_title">Display &amp; Sound</string>
    <string name="help_and_feedback_category_title">Help &amp; Feedback</string>
    <string name="privacy_category_title">Privacy</string>
    <string name="privacy_device_settings_category">Device Settings</string>
    <string name="privacy_account_settings_category">Account Settings</string>
    <string name="privacy_assistant_settings_title">Google Assistant</string>
    <string name="privacy_purchases_settings_title">Payment &amp; Purchases</string>
    <string name="privacy_app_settings_category">App Settings</string>
    <string name="privacy_category_summary">Location, Usage &amp; Diagnostics, Ads</string>
    <string name="add_account">Add account</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1$s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string name="sync_item_title"><xliff:g id="authority" example="Calendar">%s</xliff:g></string>
    <string name="sync_one_time_sync">Sync now<xliff:g id="last_sync_time">\n%1$s</xliff:g></string>
    <string name="sync_failed">Sync failed</string>
    <string name="sync_active">Sync active</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="connectivity_summary_ethernet_connected">Ethernet connected</string>
    <string name="connectivity_summary_no_network_connected">No network connected</string>
    <string name="connectivity_summary_wifi_disabled">Wi-Fi is turned off</string>
    <string name="wifi_setting_always_scan">Scanning always available</string>
    <string name="wifi_setting_always_scan_context">Let Google\'s location
        service and other apps scan for networks, even when Wi-Fi is off
    </string>
    <string name="wifi_setting_always_scan_content_description">Scanning
        always available, Let Google\'s location service and other apps scan
        for networks, even when Wi-Fi is off</string>
    <string name="wifi_setting_enable_wifi">Wi-Fi</string>
    <string name="connectivity_hint_message">Connect to network</string>
    <string name="connectivity_network_diagnostics">Network diagnostics</string>
    <string name="apps_recently_used_category_title">Recently opened apps</string>
    <string name="apps_see_all_apps">See all apps</string>
    <string name="apps_permissions_category_title">Permissions</string>
    <string name="overlay_security_slice_title"/>
    <string name="update_slice_title"/>
    <string name="all_apps_title">All apps</string>
    <string name="all_apps_show_system_apps">Show system apps</string>
    <string name="all_apps_installed">Installed apps</string>
    <string name="all_apps_other">System apps</string>
    <string name="all_apps_disabled">Disabled apps</string>
    <string name="device_daydream">Screen saver</string>
    <string name="device_display">Display</string>
    <string name="device_display_sound">Display &amp; Sound</string>
    <string name="device_sound">Sound</string>
    <string name="device_surround_sound">Surround sound</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_apps">Applications</string>
    <string name="device_storage">Storage</string>
    <string name="device_reset">Factory reset</string>
    <string name="device_backup_restore">Backup &amp; Restore</string>
    <string name="device_factory_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="device_energy_saver">Energy saver</string>
    <string name="overlay_internal_slice_title"/>
    <string name="overlay_internal_slice_uri" translatable="false"/>
    <string name="device_fastpair">Devices</string>
    <string name="fastpair_slice_uri" translatable="false" />
    <string name="surround_sound_select_formats">Select formats</string>
    <string name="surround_sound_category_title">Surround Sound</string>
    <string name="surround_sound_format_ac3">Dolby Digital</string>
    <string name="surround_sound_format_e_ac3">Dolby Digital Plus</string>
    <string name="surround_sound_format_dts">DTS</string>
    <string name="surround_sound_format_dts_hd">DTS-HD</string>
    <string name="surround_sound_format_dts_uhd">DTS-UHD</string>
    <string name="surround_sound_format_dolby_mat">Dolby Atmos with Dolby TrueHD</string>
    <string name="surround_sound_format_dolby_truehd">Dolby TrueHD</string>
    <string name="surround_sound_format_e_ac3_joc">Dolby Atmos with Dolby Digital Plus</string>
    <string name="surround_sound_format_dra">DRA</string>
    <string name="surround_sound_auto_info">Note: The Automatic option may not work if your device
        does not report its supported formats correctly.</string>
    <string name="display_category_title">Display</string>
    <string name="advanced_display_settings_title">Advanced display settings</string>
    <string name="hdmi_cec_settings_title">HDMI-CEC</string>
    <string name="advanced_sound_settings_title">Advanced sound settings</string>
    <string name="game_mode_title">Allow game mode</string>
    <string name="font_scale_settings_title">Text scaling</string>
    <string name="hdr_format_selection_title">Format selection</string>
    <string name="resolution_selection_title">Resolution</string>
    <string name="system_keyboard">Keyboard</string>
    <string name="system_keyboard_autofill">Keyboard &amp; autofill</string>
    <string name="system_autofill">Autofill</string>
    <string name="about_ads">Ads</string>
    <string name="legal_information">Legal information</string>
    <string name="copyright_title">Copyright</string>
    <string name="license_title">License</string>
    <string name="terms_title">Terms and conditions</string>
    <string name="webview_license_title">System WebView License</string>
    <string name="consumer_information_title">Consumer Information</string>
    <string name="not_connected">Not connected</string>
    <string name="wifi_setting_header_other_options">Other options</string>
    <string name="wifi_setting_see_all">See all</string>
    <string name="wifi_setting_available_networks">Available networks</string>
    <string name="wifi_setting_other_options_add_network">Add new network</string>
    <string name="wifi_setting_other_options_add_network_via_easyconnect">Quick connect</string>
    <string name="title_wifi_proxy_settings">Proxy settings</string>
    <string name="title_wifi_ip_settings">IP settings</string>
    <string name="title_current_keyboard">Current keyboard</string>
    <string name="title_current_autofill_service">Current Autofill Service</string>
    <string name="unused_apps">Unused apps</string>
    <string name="device_apps_permissions">App permissions</string>
    <string name="manage_keyboards">Manage keyboards</string>
    <string name="usage_access">Usage access</string>
    <string name="high_power_apps">Energy optimization</string>
    <string name="manage_notification_access_title">Notification access</string>
    <string name="system_alert_window_settings">Display over other apps</string>
    <string name="write_system_settings">Modify system settings</string>
    <string name="picture_in_picture_title">Picture-in-picture</string>
    <string name="special_access">Special app access</string>
    <string name="data_saver_header_info">You can connect to the internet with Wi-Fi, Ethernet, or your phone\'s hotspot."</string>
    <string name="cec_settings_slice_uri" translatable="false"/>
    <string name="screen_timeout_title">Screen Timeout</string>
    <string name="timeout_30_seconds">30 seconds</string>
    <string name="timeout_1_minute">1 minute</string>
    <string name="timeout_5_minutes">5 minutes</string>
    <string name="timeout_15_minutes">15 minutes</string>
    <string name="timeout_30_minutes">30 minutes</string>
    <string name="timeout_1_hour">1 hour</string>
    <string name="timeout_2_hours">2 hours</string>
    <string name="timeout_30_seconds_summary">Set screen timeout to 30 seconds.</string>
    <string name="timeout_1_minute_summary">Set screen timeout to 1 minute.</string>
    <string name="timeout_5_minutes_summary">Set screen timeout to 5 minutes.</string>
    <string name="timeout_15_minutes_summary">Set screen timeout to 15 minutes.</string>
    <string name="timeout_30_minutes_summary">Set screen timeout to 30 minutes.</string>
    <string name="timeout_1_hour_summary">Set screen timeout to 1 hour.</string>
    <string name="timeout_2_hours_summary">Set screen timeout to 2 hours.</string>
    <string name="mem_clear_title">Memory Clear</string>
    <string name="mem_clear_summary">Enable or disable memory clear on low RAM devices.</string>
    <string name="disable_32bit_mode_title">Disable 32-bit Mode</string>
    <string name="disable_32bit_mode_summary">Disable 32-bit mode and run in 64-bit mode only</string>
    <string name="disable_webview_title">Disable WebView</string>
    <string name="disable_webview_summary">Disable the WebView component</string>
</resources>