<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:title="@string/screen_timeout_title">

    <PreferenceCategory
        android:key="screen_timeout_category"
        android:title="@string/screen_timeout_title">
        <com.android.tv.settings.RadioPreference
            android:key="timeout_30_seconds"
            android:persistent="true"
            app:radioGroup="screen_timeout_option"
            android:title="@string/timeout_30_seconds"
            android:summary="@string/timeout_30_seconds_summary"/>

        <com.android.tv.settings.RadioPreference
            android:key="timeout_1_minute"
            android:persistent="true"
            app:radioGroup="screen_timeout_option"
            android:title="@string/timeout_1_minute"
            android:summary="@string/timeout_1_minute_summary"/>

        <com.android.tv.settings.RadioPreference
            android:key="timeout_5_minutes"
            android:persistent="true"
            app:radioGroup="screen_timeout_option"
            android:title="@string/timeout_5_minutes"
            android:summary="@string/timeout_5_minutes_summary"/>

        <com.android.tv.settings.RadioPreference
            android:key="timeout_15_minutes"
            android:persistent="true"
            app:radioGroup="screen_timeout_option"
            android:title="@string/timeout_15_minutes"
            android:summary="@string/timeout_15_minutes_summary"/>

        <com.android.tv.settings.RadioPreference
            android:key="timeout_30_minutes"
            android:persistent="true"
            app:radioGroup="screen_timeout_option"
            android:title="@string/timeout_30_minutes"
            android:summary="@string/timeout_30_minutes_summary"/>

        <com.android.tv.settings.RadioPreference
            android:key="timeout_1_hour"
            android:persistent="true"
            app:radioGroup="screen_timeout_option"
            android:title="@string/timeout_1_hour"
            android:summary="@string/timeout_1_hour_summary"/>

        <com.android.tv.settings.RadioPreference
            android:key="timeout_2_hours"
            android:persistent="true"
            app:radioGroup="screen_timeout_option"
            android:title="@string/timeout_2_hours"
            android:summary="@string/timeout_2_hours_summary"/>
    </PreferenceCategory>
</PreferenceScreen>
