<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:title="@string/connectivity_network_category_title">
    <com.android.tv.settings.compat.TsPreferenceCategory
        android:key="data_saver_info"
        android:title="@string/data_saver_header_info"/>
    <com.android.tv.settings.compat.TsSwitchPreference
        android:key="wifi_enable"
        android:persistent="true"
        android:title="@string/wifi_setting_enable_wifi" />

    <com.android.tv.settings.compat.TsCollapsibleCategory
        android:key="wifi_list"
        android:title="@string/wifi_setting_available_networks"/>
    <com.android.tv.settings.compat.TsPreference
        android:key="wifi_collapse"
        android:title="@string/wifi_setting_see_all" />

    <com.android.tv.settings.compat.TsPreferenceCategory
        android:key="wifi_other"
        android:title="@string/wifi_setting_header_other_options">
        <com.android.tv.settings.compat.TsRestrictedPreference
            android:key="wifi_add_easyconnect"
            android:title="@string/wifi_setting_other_options_add_network_via_easyconnect"
            android:fragment="com.android.tv.settings.connectivity.WiFiEasyConnectInfoFragment"
            android:icon="@drawable/ic_qr_code">
        </com.android.tv.settings.compat.TsRestrictedPreference>
        <com.android.tv.settings.compat.TsRestrictedPreference
            android:key="wifi_add"
            android:title="@string/wifi_setting_other_options_add_network" >
            <intent
                android:targetClass="com.android.tv.settings.connectivity.AddWifiNetworkActivity"
                android:targetPackage="com.android.tv.settings" />
        </com.android.tv.settings.compat.TsRestrictedPreference>

        <com.android.tv.settings.compat.TsSwitchPreference
            android:key="wifi_always_scan"
            android:persistent="true"
            android:title="@string/wifi_setting_always_scan"
            android:fragment="com.android.tv.settings.connectivity.WiFiAlwaysScanInfoFragment"/>
    </com.android.tv.settings.compat.TsPreferenceCategory>

    <com.android.tv.settings.compat.TsPreferenceCategory
        android:key="ethernet"
        android:title="@string/connectivity_ethernet">
        <com.android.tv.settings.compat.TsPreference
            android:key="ethernet_status"
            android:title="@string/not_connected" />
        <com.android.tv.settings.compat.TsPreference
            android:key="ethernet_proxy"
            android:title="@string/title_wifi_proxy_settings" />
        <com.android.tv.settings.compat.TsPreference
            android:key="ethernet_dhcp"
            android:title="@string/title_wifi_ip_settings" />
    </com.android.tv.settings.compat.TsPreferenceCategory>

    <com.android.tv.settings.compat.TsPreference
        android:key="network_diagnostics"
        android:icon="@drawable/ic_network_check"
        android:title="@string/connectivity_network_diagnostics" />

</PreferenceScreen>
