<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:title="@string/device_display_sound">

    <com.android.tv.settings.compat.TsSlicePreference
        android:key="cec"
        android:title="@string/hdmi_cec_settings_title"
        android:fragment="com.android.tv.twopanelsettings.slices.SliceFragment"
        custom:uri="@string/cec_settings_slice_uri"
        custom:isPreferenceVisible="false" />
    <com.android.tv.settings.compat.TsPreferenceCategory
        android:key="display_category"
        android:title="@string/display_category_title" />
    <com.android.tv.settings.compat.TsPreference
        android:key="font_scale"
        android:title="@string/font_scale_settings_title"
        android:fragment="com.android.tv.settings.device.displaysound.FontScalePreferenceFragmentCompat" />
    <com.android.tv.settings.compat.TsPreference
        android:fragment="com.android.tv.settings.device.displaysound.MatchContentRateFragmentCompat"
        android:key="match_content_frame_rate"
        android:title="@string/match_content_frame_rate_title"/>
    <com.android.tv.settings.compat.TsPreference
        android:key="advanced_display_settings"
        android:title="@string/advanced_display_settings_title"
        android:fragment="com.android.tv.settings.device.displaysound.AdvancedDisplayFragmentCompat" />
    <com.android.tv.settings.compat.TsPreferenceCategory
        android:key="sound_category"
        android:title="@string/device_sound" />
    <com.android.tv.settings.compat.TsSwitchPreference
        android:key="sound_effects"
        android:persistent="true"
        android:title="@string/device_sound_effects"/>
    <com.android.tv.settings.compat.TsPreference
        android:key="advanced_sound_settings"
        android:title="@string/advanced_sound_settings_title"
        android:fragment="com.android.tv.settings.device.displaysound.AdvancedVolumeFragmentCompat" />
</PreferenceScreen>
