<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android:PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/all_apps_title">

    <com.android.tv.settings.compat.TsPreferenceCategory
        android:key="InstalledPreferenceGroup"
        android:title="@string/all_apps_installed" />
    <com.android.tv.settings.compat.TsPreferenceCategory
        android:key="DisabledPreferenceGroup"
        android:title="@string/all_apps_disabled"
        android:visible="false" />
    <com.android.tv.settings.compat.TsPreference
        android:key="ShowOtherApps"
        android:title="@string/all_apps_show_system_apps"/>
    <com.android.tv.settings.compat.TsPreferenceCategory
        android:key="OtherPreferenceGroup"
        android:title="@string/all_apps_other"
        android:visible="false" />

</android:PreferenceScreen>
