<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/special_access" >
    <com.android.tv.settings.compat.TsPreference
        android:key="high_power_apps"
        android:title="@string/high_power_apps"
        android:fragment="com.android.tv.settings.device.apps.specialaccess.HighPowerCompat" />
    <com.android.tv.settings.compat.TsPreference
        android:key="AppUsage"
        android:title="@string/usage_access"
        android:fragment="com.android.tv.settings.device.apps.specialaccess.AppUsageAccessCompat" />
    <com.android.tv.settings.compat.TsPreference
        android:key="notification_access"
        android:title="@string/manage_notification_access_title"
        android:fragment="com.android.tv.settings.device.apps.specialaccess.NotificationAccessCompat" />
    <com.android.tv.settings.compat.TsPreference
        android:key="system_alert_window"
        android:title="@string/system_alert_window_settings"
        android:fragment="com.android.tv.settings.device.apps.specialaccess.SystemAlertWindowCompat" />
    <com.android.tv.settings.compat.TsPreference
        android:key="write_settings"
        android:title="@string/write_system_settings"
        android:fragment="com.android.tv.settings.device.apps.specialaccess.WriteSettingsCompat" />
    <com.android.tv.settings.compat.TsPreference
        android:key="picture_in_picture"
        android:title="@string/picture_in_picture_title"
        android:fragment="com.android.tv.settings.device.apps.specialaccess.PictureInPictureCompat" />
    <com.android.tv.settings.compat.TsPreference
        android:key="alarms_and_reminders"
        android:title="@string/alarms_and_reminders_title"
        android:fragment="com.android.tv.settings.device.apps.specialaccess.AlarmsAndRemindersCompat" />
</PreferenceScreen>
