<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2022 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/legal_information">

    <!-- Note: The titles given here probably won't be used.  Instead, we programmatically
       fill the title with the label of the activity with the corresponding action.
       If there is not an activity for an action, the item will be removed from the
       list. -->

    <!-- Copyright information -->
    <com.android.tv.settings.compat.TsPreference
        android:key="copyright"
        android:title="@string/copyright_title">
        <intent android:action="android.settings.COPYRIGHT" />
    </com.android.tv.settings.compat.TsPreference>

    <!-- License information -->
    <com.android.tv.settings.compat.TsPreference
        android:key="license"
        android:title="@string/license_title">
        <intent android:action="android.settings.LICENSE" />
    </com.android.tv.settings.compat.TsPreference>

    <!-- Terms and conditions -->
    <com.android.tv.settings.compat.TsPreference
        android:key="terms"
        android:title="@string/terms_title">
        <intent android:action="android.settings.TERMS" />
    </com.android.tv.settings.compat.TsPreference>

    <!-- System WebView License information -->
    <com.android.tv.settings.compat.TsPreference
        android:key="webview_license"
        android:title="@string/webview_license_title">
        <intent android:action="android.settings.WEBVIEW_LICENSE" />
    </com.android.tv.settings.compat.TsPreference>

    <com.android.tv.settings.about.ConsumerInformationDialogPreferenceCompat
        android:key="consumer_information"
        android:title="@string/consumer_information_title"/>

    <!-- TODO: remove this once Google Settings is implemented for TV -->
    <com.android.tv.settings.compat.TsPreference
        android:key="ads"
        android:title="@string/about_ads">
        <intent android:action="com.google.android.gms.settings.ADS_PRIVACY" />
    </com.android.tv.settings.compat.TsPreference>

</PreferenceScreen>
